fix edit this page links and adjust spacing

--- a/app/_assets/stylesheets/pages/docs.less
+++ b/app/_assets/stylesheets/pages/docs.less
@@ -569,7 +569,7 @@
       position: relative;
       margin: 0;
       border: none;
-      padding-bottom: 3px;
+      padding-bottom: 6px;
       vertical-align: text-top;
 
         a {
